2009-11-15  Michael Albinus  <michael.albinus@gmx.de>

	* arc-mode.el (archive-maybe-copy): Move creation of directory ...
	(archive-unique-fname): ... here.  (Bug#4929)

2009-11-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* help-mode.el (help-make-xrefs): Undo the last revert, and replace it
	with a real fix.

	* novice.el (disabled-command-function): Add useful args.
	Setup the help buffer so that [back] works.
	Remove redundant call to help-mode.
	(disabled-command-function): Use `case'.
	(en/disable-command): New function extracted from enable-command.
	(enable-command, disable-command): Use it.

2009-11-14  Glenn Morris  <rgm@gnu.org>

	* menu-bar.el (menu-bar-tools-menu): Read and send mail entries are not
	constants.  (Bug#4913)

	* emacs-lisp/elint.el (elint-standard-variables): Doc fix.

2009-11-14  Shigeru Fukaya  <shigeru.fukaya@gmail.com>

	* emacs-lisp/elint.el (elint-standard-variables): Add some variables
	defined in C that have no doc-strings.  (Bug#1063)

2009-11-14  Francis Wright  <F.J.Wright@qmul.ac.uk>

	* cus-edit.el (data, files):
	* ps-print.el (postscript): Doc fixes for custom groups.  (Bug#3327)

2009-11-14  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (shell-command): Doc fix (Bug#4891).

	* help-mode.el (help-make-xrefs): Revert 2009-11-13 change.

2009-11-14  Glenn Morris  <rgm@gnu.org>

	* emulation/viper.el (viper-set-hooks): Remove duplicate advice
	statements for vc-diff, emerge-quit, and rmail-cease-edit.
	If they are already loaded, eval-after-load will do the right thing.

	* speedbar.el (top-level): Remove unnecessary load of ange-ftp when
	compiling.

	* emacs-lisp/bytecomp.el (byte-compile-single-version): Remove, unused.

	* simple.el (x-selection-owner-p): Declare.
	(read-mail-command): Use custom radio type rather than choice.
	(completion-no-auto-exit): Doc fix.

	* custom.el (defgroup):
	* epg-config.el (epg): Doc fixes.

2009-11-14  Dan Nicolaescu  <dann@ics.uci.edu>
